# aaprop

./: .cz.toml  .gitignore  .gitleaksignore  .gitpod.Dockerfile  .gitpod.yml  .markdownlint.json  .markdownlintignore  .mise.audit.toml  .mise.ci.toml  .mise.docs.toml  .mise.release.toml  .mise.test.toml  .pre-commit-config.yaml  .releaserc.yml  .rustfmt.toml  .secrets.baseline  .vale.ini  .yamlfmt  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  REUSE.toml  SECURITY.md  about.toml  bacon.toml  deny.toml  docker-bake.hcl  licenses_report.md  mise.toml  nextest.toml  renovate.json  sonar-project.properties
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yaml  build-container.yaml  build_container.yaml  ci.yaml  code_coverage.yaml  dependency-review.yaml  deploy.yaml  deploy_mdbook.yaml  get_next_version.yaml  release.yaml  scorecard.yml  shuttle_deploy.yaml  sonar_analysis.yaml
.mise/tasks/: audit.sh  build-release.sh  build.sh  clean.sh  deploy_to_vercel.sh  format-check.sh  format.sh  get-next-version.sh  lint.sh  test.sh
.mise/tasks/utils/: fix-lockfile.sh  generate-about.sh
.reuse/: dep5
api/: api_spec-v1.yaml  api_spec-v2.yaml
guide/: book.toml
guide/src/: 01-introduction.md  02-quick-start.md  03-api-routes.md  03-getting-started.md  04-command-line-reference.md  04-deployment-guide.md  05-command-line-reference.md  05-deployment-guide.md  06-open-api-specification.md  SUMMARY.md  chapter_1.md
meta/: LICENSE-HEADER  licenses.hbs
meta/vale-styles/config/vocabularies/Custom/: accept.txt
scripts/: build.sh  generate_about_json.sh  generate_about_md.sh
src/: amino_acid_data.json  data.rs  lib.rs  main.rs  models.rs  responses.rs  routes.rs
src/aaprop/: cli.rs  main.rs
src/aaprop_lib/: data.rs  lib.rs  models.rs  responses.rs  routes.rs
src/aaprop_lib/models/: amino_acid.rs  codon_set.rs  mod.rs  side_chain.rs
src/aaprop_server/: main.rs
src/aaprop_shuttle/: main.rs
