[package]
name = "aaprop"
version = "1.0.0-alpha.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.14.0"
axum = "0.6.16"
shuttle-axum = "0.14.0"
tokio = "1.27.0"
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
strum_macros = "0.24.3"
