# SPDX-FileCopyrightText: 2023 - 2024 Ali Sajid Imami
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

[package]
name = "aaprop"
authors = ["Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>"]
categories = ["command-line-utilities", "science", "web-programming::http-server"]
version = "1.0.0-next.1"
description = "A server application to return the amino acid properties of a given amino acid."
documentation = "https://docs.rs/crate/aaprop"
edition = "2021"
publish = false
homepage = "https://aliimami.com/aaprop"
keywords = ["bioinformatics", "amino-acids"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
shuttle = ["tracing"]
tracing = []
static = []
server = []

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
shuttle-axum = "0.41.0"
shuttle-runtime = "0.41.0"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
strum_macros = "0.26.2"
tokio = "1.27.0"
tracing = { version = "0.1.38", features = ["async-await"] }

[dev-dependencies]
rstest = "0.18.2"

[lints.rustdoc]
broken_intra_doc_links = "deny" # Ensure that all intra-doc links point to valid items
missing_docs = "forbid" # Ensure that all public items have documentation
invalid_rust_codeblocks = "deny" # Ensure that all rust code blocks are valid
redundant_explicit_links = "deny" # Ensure that all explicit links are necessary

[profile.dev]
opt-level = 1 # Do not optimize
debug = true # Generate debug symbols

[profile.release]
opt-level = 'z' # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Compile the whole crate at once
panic = "abort" # Abort on panic
strip = "symbols" # Strip debug symbols
