# SPDX-FileCopyrightText: 2023 - 2024 Ali Sajid Imami
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

[package]
name = "aaprop"
authors = ["Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>"]
categories = [
    "command-line-utilities",
    "science",
    "web-programming::http-server",
]
version = "2.1.2-next.4"
description = "A server application to return the amino acid properties of a given amino acid."
documentation = "https://docs.rs/crate/aaprop"
edition = "2021"
publish = false
homepage = "https://aliimami.com/aaprop"
keywords = ["bioinformatics", "amino-acids", "chemistry"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["dylib", "lib", "staticlib"]
path = "src/aaprop_lib/lib.rs"

[[bin]]
name = "aaprop"
path = "src/aaprop/main.rs"

[features]
shuttle = ["dep:shuttle-axum", "dep:shuttle-runtime"]
standalone = ["dep:clap", "dep:tokio", "dep:tracing-subscriber"]
default = ["shuttle"]

[dependencies]
axum = "0.8.1"
axum-test = "17.2.0"
cfg_block = "0.2.0"
clap = { version = "4.5.29", features = ["derive", "env"], optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
shuttle-axum = { version = "0.53.0", optional = true }
shuttle-runtime = { version = "0.53.0", optional = true }
tokio = { version = "1.43.0", optional = true, features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }

[dev-dependencies]
rstest = "=0.25.0"

[lints.rust]
unsafe_code = "forbid" # Ensure that the crate does not use unsafe code

[lints.rustdoc]
broken_intra_doc_links = "deny"   # Ensure that all intra-doc links point to valid items
missing_docs = "forbid"           # Ensure that all public items have documentation
invalid_rust_codeblocks = "deny"  # Ensure that all rust code blocks are valid
redundant_explicit_links = "deny" # Ensure that all explicit links are necessary

[profile.dev]
opt-level = 1 # Do not optimize
debug = true  # Generate debug symbols

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Compile the whole crate at once
panic = "abort"   # Abort on panic
strip = "symbols" # Strip debug symbols
